[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/scene_manager/label.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scene_manager/icons/FileDialog.svg" type="Texture" id=3]
[ext_resource path="res://addons/scene_manager/manager.gd" type="Script" id=6]

[node name="root_container" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 6 )

[node name="main_container" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 590.0

[node name="scenes" type="ScrollContainer" parent="main_container"]
margin_right = 280.0
margin_bottom = 384.0
size_flags_vertical = 3

[node name="container" type="VBoxContainer" parent="main_container/scenes"]
margin_right = 280.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="accept_dialog" type="AcceptDialog" parent="main_container/scenes/container"]
margin_right = 280.0
margin_bottom = 58.0
window_title = "Error"
dialog_autowrap = true

[node name="scene_list" type="VBoxContainer" parent="main_container/scenes/container"]
margin_right = 280.0
margin_bottom = 260.0
custom_constants/separation = 10

[node name="_title" type="HBoxContainer" parent="main_container/scenes/container/scene_list"]
margin_right = 280.0
margin_bottom = 20.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="main_container/scenes/container/scene_list/_title"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )

[node name="key" parent="main_container/scenes/container/scene_list/_title" instance=ExtResource( 2 )]
margin_left = 30.0
margin_right = 150.0
text = "Key:"

[node name="value" parent="main_container/scenes/container/scene_list/_title" instance=ExtResource( 2 )]
margin_left = 160.0

[node name="HSeparator" type="HSeparator" parent="main_container"]
margin_top = 388.0
margin_right = 280.0
margin_bottom = 392.0

[node name="ignores" type="ScrollContainer" parent="main_container"]
margin_top = 396.0
margin_right = 280.0
margin_bottom = 512.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="container" type="VBoxContainer" parent="main_container/ignores"]
margin_right = 280.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ignore_list" type="VBoxContainer" parent="main_container/ignores/container"]
margin_right = 280.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="_title" type="HBoxContainer" parent="main_container/ignores/container/ignore_list"]
margin_right = 280.0
margin_bottom = 20.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="main_container/ignores/container/ignore_list/_title"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )

[node name="scenes" parent="main_container/ignores/container/ignore_list/_title" instance=ExtResource( 2 )]
margin_left = 30.0
text = "Ignores:"

[node name="interactive_section_container" type="VBoxContainer" parent="main_container"]
margin_top = 516.0
margin_right = 280.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="ignore_interactive_section_container" type="MarginContainer" parent="main_container/interactive_section_container"]
margin_right = 280.0
margin_bottom = 24.0
size_flags_vertical = 8

[node name="add_ignore_container" type="HBoxContainer" parent="main_container/interactive_section_container/ignore_interactive_section_container"]
margin_right = 280.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="dialog_add_ignore_container" type="HBoxContainer" parent="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container"]
margin_right = 135.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="file_dialog" type="FileDialog" parent="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container"]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a Directory"
mode = 2
filters = PoolStringArray( "*.tscn" )

[node name="file_dialog_button" type="Button" parent="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container"]
margin_right = 28.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
icon = ExtResource( 3 )

[node name="address" type="LineEdit" parent="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container"]
margin_left = 32.0
margin_right = 135.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="add" type="Button" parent="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container"]
margin_left = 145.0
margin_right = 280.0
margin_bottom = 24.0
size_flags_horizontal = 3
disabled = true
text = "Add"

[node name="margin_refresh_save_container" type="MarginContainer" parent="main_container/interactive_section_container"]
margin_top = 34.0
margin_right = 280.0
margin_bottom = 64.0
size_flags_vertical = 0

[node name="refresh_save_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container"]
margin_right = 280.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="refresh" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container"]
margin_right = 135.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Refresh"

[node name="save" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container"]
margin_left = 145.0
margin_right = 280.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Save"

[connection signal="dir_selected" from="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container/file_dialog" to="." method="_on_file_dialog_dir_file_selected"]
[connection signal="file_selected" from="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container/file_dialog" to="." method="_on_file_dialog_dir_file_selected"]
[connection signal="button_up" from="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container/file_dialog_button" to="." method="_on_file_dialog_button_button_up"]
[connection signal="text_changed" from="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/dialog_add_ignore_container/address" to="." method="_on_address_text_changed"]
[connection signal="button_up" from="main_container/interactive_section_container/ignore_interactive_section_container/add_ignore_container/add" to="." method="_on_add_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/refresh" to="." method="_on_refresh_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save" to="." method="_on_save_button_up"]
